# agentx

./: .env.example  .gitignore  Dockerfile  HANDOVER.md  HANDOVER_2026-04-10.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: server.py
backend/src/: __init__.py
backend/src/agents/: __init__.py  after_hours.py  booking_boss.py  campaign.py  lead_catcher.py  litellm_client.py  orchestrator.py  review_pilot.py
backend/src/agents/prompts/: __init__.py  after_hours.py  booking_boss.py  campaign.py  lead_catcher.py  orchestrator.py  review_pilot.py
backend/src/api/routes/: __init__.py  auth.py  businesses.py  conversations.py  customers.py  dashboard.py  events.py  retell_voice.py  voice.py
backend/src/config/: __init__.py  settings.py
backend/src/db/: __init__.py  base.py  models.py  seed_appointment.py  session.py  sqlite_store.py  store.py
backend/src/models/: __init__.py  business.py  conversation.py  customer.py  event.py
backend/src/tools/: __init__.py  calendar.py  email.py  reviews.py  sms.py  voice.py
deployment/k8s/: app.yaml  configmap.yaml
frontend/mobile/: README.md
frontend/tablet/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/tablet/src/: App.css  App.jsx  VoiceCall.css  VoiceCall.jsx  VoiceCallRetell.jsx  api.js  index.css
frontend/tablet/src/wizard/: SetupWizard.css  SetupWizard.jsx
tests/: __init__.py  conftest.py  test_events.py  test_lead_catcher.py  test_orchestrator.py
tools/: voice_sim.py
